--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "fireship-lessons"
-  }
+    "default": "projecttest-43936",
+    "staging": "projecttest-43936"
+  },
+  "targets": {},
+  "etags": {}
 }
